--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,6 +37,16 @@ jobs:
           git push origin HEAD:${{ github.ref_name }}
         shell: bash
 
+      - name: Setup SSH
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        run: |
+          mkdir -p ~/.ssh
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_SERVER }} >> ~/.ssh/known_hosts
+          chmod 644 ~/.ssh/known_hosts
+
       - name: Transfer Build to Server
         run: |
           scp -P ${{ secrets.SSH_PORT }} -o StrictHostKeyChecking=no -r ./ProductionBuild/linux-x64/* ${{ secrets.SSH_USER }}@${{ secrets.SSH_SERVER }}:/opt/telegram-bot-openai/
